test/tests/errors/error-file-get-end-of-file.sm
// true
// true
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    get(f);
}